template and urls

--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,10 +1,18 @@
-{% extends 'base.html' %} {% block page_title %} Individual Challenge {%endblock
-%} {% block page_content %}
-<center>
-  <h2>Challenge for {{ month|title }}</h2>
-  {% if month_challenge is None %}
-  <b> No Challenge for this month </b>
-  {% else %} {{ month_challenge }} {% endif %} {% include
-  'challenges/includes/header.html' %}
-</center>
+{% extends 'base.html' %}
+
+{% block page_title %}
+  Individual Challenge 
+{% endblock %} 
+
+{% block page_content %}
+  <center>
+    {% include 'header.html' with page_name='challenge' %}
+
+    <h2>Challenge for {{ month|title }}</h2>
+    {% if month_challenge is None %}
+      <b> No Challenge for this month </b>
+    {% else %} 
+      {{ month_challenge }} 
+    {% endif %} 
+  </center>
 {% endblock %}
