--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -5,12 +5,11 @@
 {% endblock  %}
 
 {% block page_content %}
+  {% include 'header.html' with page_name='index' %}
+
   <ol>
     {% for month in month_list %}
     <li><a href="{% url 'month_challenge' month %}"> {{ month }} </a></li>
     {% endfor %}
   </ol>
-  {% include 'challenges/includes/header.html' %}
 {% endblock  %}
-
-
