--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block page_title %} Title {% endblock %}</title>
+    <title>{% block page_title %} Default Title {% endblock %}</title>
   </head>
   <body>
     {% block page_content %}{% endblock %}
